--- a/src/portweb/index.html
+++ b/src/portweb/index.html
@@ -284,7 +284,7 @@
   <script src="/assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Coder", "Developer", "Cutie"],
+      strings: ["Coder", "Developer", "with no life : ("],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
